[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/levish0/Clay"
description = "An autonomous AI coding agent running directly in your terminal."
edition = "2024"
rust-version = "1.93.0"
keywords = []
categories = []
readme = "README.md"

[workspace.dependencies]
# Internal crates
clay-core = { path = "crates/clay-core" }
clay-llm = { path = "crates/clay-llm" }
clay-tools = { path = "crates/clay-tools" }
clay-tui = { path = "crates/clay-tui" }

# External dependencies
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio = { version = "1.52.0", features = ["full"] }
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2+spec-1.1.0"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
uuid = { version = "1.23.1", features = ["v4", "v7"] }
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
glob = "0.3.3"
unicode-width = "0.2.2"
textwrap = "0.16.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

